@@ -25,6 +25,8 @@ import com.powsybl.sensitivity.factors.variables.PhaseTapChangerAngle;
 import org.junit.jupiter.api.Test;
 
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionException;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -40,9 +42,8 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = FourBusNetworkFactory.create();
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        List<Contingency> contingencies = new ArrayList<>();
         Branch l = network.getBranch("l23");
-        contingencies.add(new Contingency(l.getId(), new BranchContingency(l.getId())));
+        List<Contingency> contingencies = List.of(new Contingency(l.getId(), new BranchContingency(l.getId())));
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().filter(gen -> gen.getId().equals("g2")).collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
@@ -72,9 +73,8 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = FourBusNetworkFactory.create();
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        List<Contingency> contingencies = new ArrayList<>();
         Branch l = network.getBranch("l12");
-        contingencies.add(new Contingency(l.getId(), new BranchContingency(l.getId())));
+        List<Contingency> contingencies = List.of(new Contingency(l.getId(), new BranchContingency(l.getId())));
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().filter(gen -> gen.getId().equals("g2")).collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
@@ -103,9 +103,8 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = FourBusNetworkFactory.create();
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        List<Contingency> contingencies = new ArrayList<>();
         Branch l = network.getBranch("l23");
-        contingencies.add(new Contingency(l.getId(), new BranchContingency(l.getId())));
+        List<Contingency> contingencies = List.of(new Contingency(l.getId(), new BranchContingency(l.getId())));
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().filter(gen -> gen.getId().equals("g2")).collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
@@ -128,8 +127,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = FourBusNetworkFactory.create();
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l23+l34", new BranchContingency("l23"), new BranchContingency("l34")));
+        List<Contingency> contingencies = List.of(new Contingency("l23+l34", new BranchContingency("l23"), new BranchContingency("l34")));
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().filter(gen -> gen.getId().equals("g2")).collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
@@ -155,8 +153,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = FourBusNetworkFactory.create();
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l23+l34", new BranchContingency("l23"), new BranchContingency("l34")));
+        List<Contingency> contingencies = List.of(new Contingency("l23+l34", new BranchContingency("l23"), new BranchContingency("l34")));
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().filter(gen -> gen.getId().equals("g2")).collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
@@ -185,8 +182,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = ConnectedComponentNetworkFactory.createTwoComponentWithGeneratorAndLoad();
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l34", new BranchContingency("l34")));
+        List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
@@ -218,8 +214,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l34", new BranchContingency("l34")));
+        List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
@@ -250,8 +245,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = ConnectedComponentNetworkFactory.createThreeCcLinkedByASingleBus();
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l34+l48", new BranchContingency("l34"), new BranchContingency("l48")));
+        List<Contingency> contingencies = List.of(new Contingency("l34+l48", new BranchContingency("l34"), new BranchContingency("l48")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
@@ -307,8 +301,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = ConnectedComponentNetworkFactory.createTwoConnectedComponentsLinkedByASerieOfTwoBranches();
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l34+l45", new BranchContingency("l34"), new BranchContingency("l45")));
+        List<Contingency> contingencies = List.of(new Contingency("l34+l45", new BranchContingency("l34"), new BranchContingency("l45")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
@@ -342,8 +335,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = ConnectedComponentNetworkFactory.createThreeCc();
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l34+l47", new BranchContingency("l34"), new BranchContingency("l47")));
+        List<Contingency> contingencies = List.of(new Contingency("l34+l47", new BranchContingency("l34"), new BranchContingency("l47")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
@@ -393,8 +385,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l34", new BranchContingency("l34")));
+        List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getLoadStream().collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
@@ -427,8 +418,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
             return factors;
         };
 
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l14", new BranchContingency("l14")));
+        List<Contingency> contingencies = List.of(new Contingency("l14", new BranchContingency("l14")));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
@@ -464,8 +454,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
             return factors;
         };
 
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l34", new BranchContingency("l34")));
+        List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
@@ -496,8 +485,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
             return factors;
         };
 
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l56", new BranchContingency("l56")));
+        List<Contingency> contingencies = List.of(new Contingency("l56", new BranchContingency("l56")));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
@@ -520,8 +508,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l24+l35", new BranchContingency("l24"), new BranchContingency("l35")));
+        List<Contingency> contingencies = List.of(new Contingency("l24+l35", new BranchContingency("l24"), new BranchContingency("l35")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
@@ -555,8 +542,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l34+l27+l58", new BranchContingency("l34"), new BranchContingency("l27"), new BranchContingency("l58")));
+        List<Contingency> contingencies = List.of(new Contingency("l34+l27+l58", new BranchContingency("l34"), new BranchContingency("l27"), new BranchContingency("l58")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
@@ -583,8 +569,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l27+l18+l39+l14", new BranchContingency("l27"), new BranchContingency("l18"), new BranchContingency("l39"), new BranchContingency("l14")));
+        List<Contingency> contingencies = List.of(new Contingency("l27+l18+l39+l14", new BranchContingency("l27"), new BranchContingency("l18"), new BranchContingency("l39"), new BranchContingency("l14")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
@@ -642,8 +627,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = ConnectedComponentNetworkFactory.createTwoComponentWithGeneratorAndLoad();
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l34", new BranchContingency("l34")));
+        List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
 
         Map<String, Float> glskMap = new HashMap<>();
         glskMap.put("g2", 25f);
@@ -684,8 +668,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
 
         SensitivityFactorsProvider factorsProvider = net -> factors;
 
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency(
+        List<Contingency> contingencies = List.of(new Contingency(
                 "l23+l24+l36+l35+l46",
                 new BranchContingency("l23"),
                 new BranchContingency("l24"),
@@ -730,8 +713,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityFactorsProvider factorsProvider = net -> factors;
         List<String> contingencyBranchesId = Arrays.asList("l23", "l24", "l36", "l35", "l46");
         String contingencyId = String.join("+", contingencyBranchesId);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency(
+        List<Contingency> contingencies = List.of(new Contingency(
                 contingencyId,
                 contingencyBranchesId.stream().map(BranchContingency::new).collect(Collectors.toList())
         ));
@@ -768,8 +750,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityFactorsProvider factorsProvider = net -> factors;
         List<String> contingencyBranchesId = Arrays.asList("l24", "l35");
         String contingencyId = String.join("+", contingencyBranchesId);
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency(
+        List<Contingency> contingencies = List.of(new Contingency(
                 contingencyId,
                 contingencyBranchesId.stream().map(BranchContingency::new).collect(Collectors.toList())
         ));
@@ -804,7 +785,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         String branchId = "l36";
         String injectionId = "g3";
         Branch branch = network.getBranch(branchId);
-        List<SensitivityFactor> factors = Collections.singletonList(new BranchFlowPerInjectionIncrease(
+        List<SensitivityFactor> factors = List.of(new BranchFlowPerInjectionIncrease(
                 createBranchFlow(branch),
                 new InjectionIncrease(injectionId, injectionId, injectionId)
         ));
@@ -817,10 +798,10 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
 
         Function<List<Contingency>, SensitivityAnalysisResult> resultProvider = contingencies -> sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, sensiParameters, LocalComputationManager.getDefault()).join();
 
-        SensitivityAnalysisResult result78 = resultProvider.apply(Collections.singletonList(contingency78));
-        SensitivityAnalysisResult result12 = resultProvider.apply(Collections.singletonList(contingency12));
-        SensitivityAnalysisResult result35and56and57 = resultProvider.apply(Collections.singletonList(contingency35and56and57));
-        SensitivityAnalysisResult globalResult = resultProvider.apply(Arrays.asList(contingency12, contingency78, contingency35and56and57));
+        SensitivityAnalysisResult result78 = resultProvider.apply(List.of(contingency78));
+        SensitivityAnalysisResult result12 = resultProvider.apply(List.of(contingency12));
+        SensitivityAnalysisResult result35and56and57 = resultProvider.apply(List.of(contingency35and56and57));
+        SensitivityAnalysisResult globalResult = resultProvider.apply(List.of(contingency12, contingency78, contingency35and56and57));
 
         assertEquals(getContingencyFunctionReference(result78, branchId, "l78"), getContingencyFunctionReference(globalResult, branchId, "l78"), LoadFlowAssert.DELTA_POWER);
         assertEquals(getContingencyFunctionReference(result12, branchId, "l12"), getContingencyFunctionReference(globalResult, branchId, "l12"), LoadFlowAssert.DELTA_POWER);
@@ -839,8 +820,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
             return factors;
         };
 
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l34", new BranchContingency("l34")));
+        List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
             sensiParameters, LocalComputationManager.getDefault())
             .join();
@@ -865,8 +845,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
             return factors;
         };
 
-        List<Contingency> contingencies = new ArrayList<>();
-        contingencies.add(new Contingency("l34", new BranchContingency("l34")));
+        List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
             sensiParameters, LocalComputationManager.getDefault())
             .join();
@@ -877,5 +856,44 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         assertEquals(-5d / 3d, getContingencyFunctionReference(result, "l12", "l34"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-1d / 3d, getContingencyFunctionReference(result, "l13", "l34"), LoadFlowAssert.DELTA_POWER);
         assertEquals(4d / 3d, getContingencyFunctionReference(result, "l23", "l34"), LoadFlowAssert.DELTA_POWER);
+    }
+
+    @Test
+    void testAdditionalFactorsNotSupported() {
+        Network network = FourBusNetworkFactory.create();
+        SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
+        Branch l = network.getBranch("l23");
+        Generator g = network.getGenerator("g1");
+        List<Contingency> contingencies = List.of(new Contingency(l.getId(), new BranchContingency(l.getId())));
+        SensitivityFactorsProvider factorsProvider = new SensitivityFactorsProvider() {
+            @Override
+            public List<SensitivityFactor> getCommonFactors(Network network) {
+                return Collections.emptyList();
+            }
+
+            @Override
+            public List<SensitivityFactor> getAdditionalFactors(Network network) {
+                return List.of(new BranchFlowPerInjectionIncrease(createBranchFlow(l), createInjectionIncrease(g)));
+            }
+        };
+        CompletableFuture<SensitivityAnalysisResult> result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, sensiParameters, LocalComputationManager.getDefault());
+        CompletionException e = assertThrows(CompletionException.class, result::join);
+        assertEquals("Factors specific to base case not yet supported", e.getCause().getMessage());
+
+        SensitivityFactorsProvider factorsProvider2 = new SensitivityFactorsProvider() {
+            @Override
+            public List<SensitivityFactor> getCommonFactors(Network network) {
+                return Collections.emptyList();
+            }
+
+            @Override
+            public List<SensitivityFactor> getAdditionalFactors(Network network, String contingencyId) {
+                return List.of(new BranchFlowPerInjectionIncrease(createBranchFlow(l), createInjectionIncrease(g)));
+            }
+        };
+
+        CompletableFuture<SensitivityAnalysisResult> result2 = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider2, contingencies, sensiParameters, LocalComputationManager.getDefault());
+        e = assertThrows(CompletionException.class, result2::join);
+        assertEquals("Factors specific to one contingency not yet supported", e.getCause().getMessage());
     }
 }
